wordpress-mysql-advanced/wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
spec:
  ingressClassName: nginx
  rules:
    - host: wordpress.moons.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: wordpress
                port:
                  number: 8080
